--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@angular/platform-browser": "^4.3.6",
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/router": "^4.3.6",
+    "@angular/service-worker": "^1.0.0-beta.16",
     "core-js": "^2.5.1",
     "hammerjs": "^2.0.8",
     "prismjs": "^1.5.1",
