--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-htmlmin": "^2.4.0",
     "grunt-depcheck": "^0.1.3",
     "grunt-gh-pages": "^2.0.0",
     "grunt-htmlhint": "^0.9.13",
