--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,10 +4,7 @@
     "declaration": false,
     "noUnusedParameters": false,
     "outDir": "../out-tsc/app",
-    "target": "es5",
-    "types": [
-      "prismjs"
-    ]
+    "target": "es5"
   },
   "extends": "../node_modules/tsconfig-holy-grail/src/tsconfig-browser"
 }
