--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ addons:
   chrome: stable
 after_script: greenkeeper-lockfile-upload
 before_install: npm install npm@latest --global
-before_script:
-  - greenkeeper-lockfile-update
+before_script: greenkeeper-lockfile-update
 dist: trusty
 env:
   global:
