--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/cli": "~1.7.2",
     "@angular/compiler-cli": "^5.2.7",
     "@angular/language-service": "^5.2.7",
+    "@commitlint/cli": "^6.1.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
