--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/compiler-cli": "^5.2.7",
     "@angular/language-service": "^5.2.7",
     "@commitlint/cli": "^6.1.3",
+    "@commitlint/config-angular": "^6.1.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
