--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "karma-sauce-launcher": "^1.2.0",
     "load-grunt-config": "^0.19.2",
     "protractor": "~5.1.2",
-    "sonarwhal": "1.0.1",
+    "sonarwhal": "^1.0.3",
     "stylelint": "^9.1.1",
     "stylelint-config-holy-grail": "^1.0.0",
     "ts-node": "~4.1.0",
