--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
       "jasmine-spec-reporter",
       "karma",
       "karma-chrome-launcher",
+      "karma-coverage-istanbul-reporter",
       "karma-jasmine",
       "protractor",
       "ts-node",
