--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@sonarwhal/rule-manifest-is-valid": "^5.1.0",
     "@sonarwhal/rule-meta-charset-utf-8": "^3.0.3",
     "@sonarwhal/rule-meta-viewport": "^3.0.2",
+    "@sonarwhal/rule-minified-js": "^1.0.2",
     "@sonarwhal/rule-no-disallowed-headers": "^3.0.4",
     "@sonarwhal/rule-no-friendly-error-pages": "^3.0.2",
     "@sonarwhal/rule-no-html-only-headers": "^3.0.5",
