--- a/.hintrc
+++ b/.hintrc
@@ -57,6 +57,7 @@
         "meta-charset-utf-8": "error",
         "meta-viewport": "error",
         "minified-js": "error",
+        "no-bom": "error",
         "no-disallowed-headers": "off",
         "no-friendly-error-pages": "error",
         "no-html-only-headers": "error",
