test: add no-p3p webhint rule

--- a/.hintrc
+++ b/.hintrc
@@ -67,6 +67,7 @@
                 "max-html-redirects": 1
             }
         ],
+        "no-p3p": "error",
         "no-protocol-relative-urls": "error",
         "no-vulnerable-javascript-libraries": "error",
         "sri": "error",
