fix: define port in angular.json

--- a/angular.json
+++ b/angular.json
@@ -77,7 +77,8 @@
                         }
                     },
                     "options": {
-                        "browserTarget": "web-audio-conference-2017:build"
+                        "browserTarget": "web-audio-conference-2017:build",
+                        "port": 7733
                     }
                 },
                 "test": {
