fix(package): update husky config

--- a/package.json
+++ b/package.json
@@ -139,6 +139,12 @@
     ]
   },
   "homepage": "https://chrisguttandin.github.io/web-audio-conference-2017",
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint --edit --extends @commitlint/config-angular",
+      "pre-commit": "grunt lint"
+    }
+  },
   "license": "MIT",
   "main": "src/index.html",
   "name": "web-audio-conference-2017",
@@ -148,8 +154,6 @@
     "url": "https://github.com/chrisguttandin/web-audio-conference-2017.git"
   },
   "scripts": {
-    "commitmsg": "commitlint --edit --extends @commitlint/config-angular",
-    "precommit": "grunt lint",
     "test": "grunt lint && grunt test"
   },
   "version": "1.5.69"
