--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "description": "My talk at the Web Audio Conference 2017.",
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.5",
-    "@angular/cli": "~6.2.5",
+    "@angular/cli": "^7.0.2",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
     "@commitlint/cli": "^7.2.1",
