--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "description": "My talk at the Web Audio Conference 2017.",
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.5",
+    "@angular-devkit/build-angular": "^0.10.2",
     "@angular/cli": "^7.0.2",
     "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^7.0.0",
