--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
       "karma-chrome-launcher",
       "karma-coverage-istanbul-reporter",
       "karma-jasmine",
+      "karma-jasmine-html-reporter",
       "protractor",
       "rxjs",
       "ts-node",
