--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hammerjs": "^2.0.8",
     "prismjs": "^1.20.0",
     "rxjs": "~6.5.5",
+    "subscribable-things": "^1.6.0",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
   },
