--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
             "jasmine-spec-reporter",
             "karma",
             "karma-chrome-launcher",
+            "karma-coverage",
             "karma-jasmine",
             "protractor",
             "rxjs",
